--- a/templates/upload.html
+++ b/templates/upload.html
@@ -420,7 +420,7 @@ PD 6, Thursday, December 21st</textarea>
       const button3 = document.createElement("button");
       button3.classList.add("tablinks");
       button3.setAttribute("onclick", "openData(event, 'Junior Responses')");
-      button3.setAttribute("id", "defaultOpen");
+      //button3.setAttribute("id", "defaultOpen");
       button3.textContent = "Junior Responses";
       tabContainer.appendChild(button3);
 
