--- a/templates/upload.html
+++ b/templates/upload.html
@@ -448,6 +448,7 @@ PD 6, Thursday, December 21st</textarea>
       roomsTimesDiv.setAttribute("id", "Rooms/Times");
 
       container.appendChild(seniorResponsesDiv);
+      container.appendChild(juniorResponsesDiv);
       container.appendChild(roomsTimesDiv);
 
       // Append the whole structure to the document body or a specific container
