--- a/templates/upload.html
+++ b/templates/upload.html
@@ -387,7 +387,7 @@ PD 6, Thursday, December 21st</textarea>
       juniorDisplayHeaders=data.juniorDisplayHeaders;
       juniorDataDict=data.juniorDataDict;
       console.log(JSON.stringify(juniorDataDict));
-      console.log(JSON.stringify(juniorDisplayHeaders));
+      console.log(JSON.stringify(juniorDisplayAllTimesFromData));
       showParsedData();	
     })
     .catch(err => console.error("Failed to fetch room data:", err));	
