--- a/templates/seniorQuestionnaire.html
+++ b/templates/seniorQuestionnaire.html
@@ -7,24 +7,24 @@
 <style>
 	body{
     	margin: 0;
-        padding: 40px;
-        display: flex;
+      padding: 40px;
+      display: flex;
     	background-color: black;
-        align-items: center;
-        justify-content: center;
-        font-family: 'Assistant', sans-serif;
+      align-items: center;
+      justify-content: center;
+      font-family: 'Assistant', sans-serif;
      }
      .optionsColor{
      	background-color: #cb5151ff;
         padding: 10px;
         font-size: 18px;
+        color: white;
       }
      .formContainer{
      	background-color: #D9D9D9;
       	padding: 40px;
       	width: 100%;
       	max-width: 600px;
-      	border-radius: 10px;
       	box-shadow: 0 2px 12px rgba(0, 0, 0, 0.15);
     }
 	.header{
@@ -92,7 +92,7 @@
   
     .dropdown-button {
       background-color: #cb5151ff;
-      color: black;
+      color: white;
       padding: 12px 20px;
       font-size: 16px;
       border: none;
@@ -113,10 +113,11 @@
       width: 100%;
       box-sizing: border-box;
       text-align: left;
+      color: white;
     }
 
     .dropdown-content a {
-      color: black;
+      color: white;
       padding: 12px 16px;
       text-decoration: none;
       display: block;
@@ -146,6 +147,7 @@
         font-size: 16px;
         padding: 15px;
         border-color:#cb5151ff;
+        color: white;
     }
     
     .inputBox{
@@ -308,4 +310,3 @@ Enter here
 </div>
 </body>
 </html>
-
