--- a/templates/seniorQuestionnaire.html
+++ b/templates/seniorQuestionnaire.html
@@ -54,6 +54,7 @@
         cursor: pointer;
         margin-top: 30px;
         width: 100%;
+        font-weight: bold;
     }  
     button[type="submit"]:hover {
   background-color: #870c0cff;
