--- a/templates/select.html
+++ b/templates/select.html
@@ -15,12 +15,18 @@
       height: 100%;
     }
 
-    .box {
+    .box1 {
       background-color: #d9d9d9;
       padding: 40px;
       box-sizing: border-box;
       width: 500px;
       height: 400px;
+    }
+    .box {
+    	background-color: #d9d9d9;
+        padding: 40px;
+        box-sizing: border-box;
+        width: 500px;
     }
 
     .big-button {
@@ -145,7 +151,7 @@
 
     <div class="box">
       <div class="login-header">Committee Member Login</div>
-      <br><br><br>
+      
       <input type="text" placeholder="Enter Code" />
       <button class="login-button" onclick="moderator()">Login</button>
     </div>
