--- a/templates/topics.html
+++ b/templates/topics.html
@@ -385,7 +385,7 @@ fetch('/get_data')
             console.log(data);
             
             // Send the data to the backend
-            fetch('/submit_availability', {
+            fetch('/set_topics', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json'
