--- a/templates/topics.html
+++ b/templates/topics.html
@@ -210,6 +210,7 @@
     };
     */
 
+    var assignments = {};
 	 var rooms={};
 	 var topics={};
 fetch('/get_data')
@@ -222,7 +223,7 @@ fetch('/get_data')
 	
     var roomCurrentCapacities={};
     
-    const assignments = {};
+    //const assignments = {};
     const totalAssignedPerTopic = {};
 
     for (const room in rooms) {
