--- a/templates/viewResponses.html
+++ b/templates/viewResponses.html
@@ -44,7 +44,8 @@
       color: white;
       border: none;
       margin-bottom: 30px;
-      appearance: none;
+      cursor: pointer;
+
     }
 
     .button {
