--- a/templates/viewResponses.html
+++ b/templates/viewResponses.html
@@ -157,7 +157,7 @@
       </select>
       <button class="button">Upload Response Spreadsheet</button>
       <button class="button">Export to Spreadsheet</button>
-      <button class="button" style="background-color: #6f0404ff;" >Return</button>
+      <button class="button">Return</button>
     </div>
   </div>
 </body>
