--- a/templates/upload.html
+++ b/templates/upload.html
@@ -208,7 +208,10 @@ PD 6, Thursday, December 21st</textarea>
             // Enable button if both fields have values
             button.disabled = !((input0 || (input20!=0)) && input1 && input2 && input3 && input4 && input5 && input6 && input7 && input8 && input9 && input10 && input11 && input32 && input33 && input34 && input35 && (input31 || (input30!=0)));
         }
-	checkInputs();
+	window.onload = function() {
+	    checkInputs();
+	};
+
         // Attach event listeners to inputs
         /*document.getElementById("lastName").addEventListener("input", checkInputs);
         document.getElementById("firstName").addEventListener("input", checkInputs);
