--- a/templates/index.html
+++ b/templates/index.html
@@ -71,6 +71,7 @@
       cursor: pointer;
       margin-top: 10px;
       text-decoration: underline;
+       font-size: 14px;
     }
 
     .login-button:hover {
