--- a/templates/index.html
+++ b/templates/index.html
@@ -74,7 +74,7 @@
        font-size: 14px;
     }
 
-    .login-button:hover {
+    .button:hover {
       background-color: #a10000;
     }
   </style>
