--- a/templates/logistics.html
+++ b/templates/logistics.html
@@ -281,7 +281,7 @@ function collectDayNameChanges(dayPeriods) {
             .catch(error => {
                 console.error('❌ Error:', error);
             });
-            window.location.href = "/generateStep1";
+            window.location.href = "/topics";
         }
         
     </script>
