--- a/templates/generateStep1.html
+++ b/templates/generateStep1.html
@@ -116,7 +116,7 @@
 
   <div class="main-container">
     <div class="rooms" id="rooms-container"></div>
-    <button id="generate" class="button" onclick="generateSchedules()">Generate Schedules</button>
+    <button id="generate" class="button" onclick="generateSchedules()">Set Rooms</button>
   </div>
   <!---<button id="generate" style="display: none; font-size: 25px;" onclick="generateSchedules()">Generate schedules</button>--->
   
