--- a/templates/generateStep2.html
+++ b/templates/generateStep2.html
@@ -648,7 +648,7 @@
    fetch('/get_offenders')
     .then(res => res.json())
     .then(data => {
-      offenders=data.getOffenders;
+      offenders=data.offenders;
 	    console.log(offenders);
 	document.getElementById("checkMessage").style.innerText = "The following seniors cannot present during the day they are currently in: "+JSON.stringify(offenders);    
     })
