--- a/templates/index.html
+++ b/templates/index.html
@@ -114,11 +114,11 @@
     .then(message => {
         console.log("📢 Backend says:", message);
 
-        return fetch('/isAdmin');
+        return fetch('/getUser');
     })
     .then(res => res.json())
     .then(data => {
-        if (data.isAdmin === "True") {
+        if (data.user === "Admin") {
             window.location.href = "/moderator";
         }
         // else maybe redirect to user page or display error
