--- a/templates/select.html
+++ b/templates/select.html
@@ -146,7 +146,7 @@
   <!-- Main UI -->
   <div class="wrapper">
     <div class="box">
-      <button class="big-button" onclick="seniorQuestionnaire()">Complete<br>Questionnaire</button>
+      <button class="big-button" onclick="juniorQuestionnaire()">Complete<br>Questionnaire</button>
     </div>
 
     <div class="box">
@@ -172,8 +172,8 @@
       }
     });
     
-    function seniorQuestionnaire() {
-    	window.location.href = "seniorQuestionnaire";
+    function juniorQuestionnaire() {
+    	window.location.href = "juniorQuestionnaire";
     }
 
     function moderator() {
